--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "github-markdown-css": "^3.0.1",
     "hammerjs": "^2.0.8",
     "ngx-markdown": "^7.1.3",
     "rxjs": "~6.3.3",
